style(globals.css): Add fixed widht and height of the leaflet control style(HeaderComponent.tsx): Make the burger white if we are on the homepage regardless theme preference fix(pharmacyMap.tsx): Set the LayersControl on top right so it's visible on mobile style(RelocateUserButton.tsx): As we added on top right the LayersControl, we push down a little the button to relocate user's position

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,4 +60,8 @@
   mix-blend-mode: plus-lighter;
 }
 
+.leaflet-control-layers-toggle {
+  width: 33px !important;
+  height: 33px !important;
+}
 /* End of Leaflet */
